# nexrade-cache

./: .dockerignore  .gitignore  Cargo.toml  Cross.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml  dump.rdb  install.sh  nexrade.example.toml  nexrade.rdb  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: bench.yml  ci.yml  criterion.yml  docker.yml  examples.yml  release.yml
Formula/: nexrade-cache.rb
crates/nexrade-core/: Cargo.toml
crates/nexrade-core/benches/: store_bench.rs
crates/nexrade-core/src/: acl.rs  cluster.rs  conn_registry.rs  db.rs  error.rs  expiry.rs  lib.rs  persistence.rs  pubsub.rs  replication.rs  resource.rs  resp.rs  slowlog.rs  store.rs  tracking.rs  transaction.rs  types.rs
crates/nexrade-core/src/command/: bit.rs  generic.rs  geo.rs  hash.rs  hll.rs  list.rs  mod.rs  server.rs  set.rs  stream.rs  string.rs  zset.rs
crates/nexrade-core/tests/: acl_e2e.rs  client_list_pause.rs  cluster_slots.rs  cmd_set_hot_path.rs  connection_pipeline_efficiency.rs  fix_aof_hll_stream.rs  fix_bzmpop_notify.rs  fix_expire_and_streams.rs  fix_resp3_block.rs  incr_hot_path.rs  list_hot_path.rs  multi_pop_smoke.rs  perf_tier2.rs  persistence_status.rs  pipeline_edge_cases.rs  replication_mirror.rs  zadd_hot_path.rs
crates/nexrade-lua/: Cargo.toml
crates/nexrade-lua/src/: engine.rs  function.rs  lib.rs  script_cache.rs  value.rs
crates/nexrade-metrics/: Cargo.toml
crates/nexrade-metrics/src/: counters.rs  lib.rs  server.rs  tracing_setup.rs
crates/nexrade-plugin/: Cargo.toml
crates/nexrade-plugin/src/: handler.rs  lib.rs  registry.rs
crates/nexrade-server/: Cargo.toml
crates/nexrade-server/src/: connection.rs  lib.rs  listener.rs  slowlog.rs  stream.rs
crates/nexrade-server/tests/: acl_multi_exec.rs  auth_and_admin.rs  resp3_zset_shapes.rs  tls_listener.rs
crates/nexrade-tls/: Cargo.toml
crates/nexrade-tls/src/: lib.rs
crates/nexrade-wasm/: Cargo.toml
crates/nexrade-wasm/src/: lib.rs
examples/: README.md
examples/01-basic/: hello.sh
examples/02-data-types/: hashes.sh  lists.sh  sets.sh  sorted-sets.sh  strings.sh
examples/03-pubsub/: publisher.py  subscriber.py
examples/04-transactions/: atomic-ops.py  atomic-ops.sh
examples/05-lua/: scripting.sh
examples/06-streams/: producer-consumer.py
examples/07-pipeline/: benchmark.py
examples/08-embedded/: Cargo.toml
examples/08-embedded/src/: basic_kv.rs  main.rs  pubsub.rs  transactions.rs
examples/09-plugin/: Cargo.toml
examples/09-plugin/src/: lib.rs
examples/10-wasm/: build.sh  index.html
examples/11-python-patterns/: patterns.py
fuzz/: Cargo.toml
fuzz/fuzz_targets/: resp_parser.rs  resp_serialize_roundtrip.rs
nexrade-cli/: Cargo.toml
nexrade-cli/src/: cli_client.rs  lib.rs  main.rs  windows_ansi.rs  windows_svc.rs
nexrade-cli/wix/: main.wxs
scripts/: migrate_from_redis.py
