[package]
name = "nexrade-metrics"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Prometheus metrics and OpenTelemetry tracing for nexrade-cache"

[dependencies]
nexrade-core = { path = "../nexrade-core" }

tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
prometheus = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
