[package]
name = "nexrade-tls"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Built-in TLS support for nexrade-cache using rustls — security by default"

[dependencies]
tokio = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
rustls-pki-types = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
