[package]
name = "nexrade-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "WebAssembly bindings for nexrade-cache — run in browser or edge functions"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
wasm = ["wasm-bindgen", "js-sys", "web-sys", "console_error_panic_hook", "wasm-bindgen-futures"]

[dependencies]
nexrade-core = { path = "../nexrade-core" }

serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

# WASM-specific (optional)
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[dependencies.web-sys]
version = "0.3"
optional = true
features = ["console"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true }
